# MARK-I

./: .gitignore  main.py  plan.md  pyproject.toml  test_genai.py
actions/: __init__.py  alarms.py  apps.py  device_commands.py  power.py  weather.py
answers/: bus_guide.md  reasons.md
core/: audio_state.py  bus.py  bus_test.py  context.py  events.py  exceptions.py  project_logging.py
input/: stt.py  text_input.py
memory/: __init__.py  base.py  manager.py  structured.py  vector.py
memory/data/: structured.db
memory/data/vector/: chroma.sqlite3
nlu/: classifier.py  schemas.py
output/: response_formatter.py  tts.py
reasoning/: __init__.py  coordinator.py  llm_client.py  llm_client_mulapi.py  prompt.py  prompt.txt  prompt_builder.py  rag.py
tasks/: executor.py  registry.py  scheduler.py
tests/: api_test.py  test_audio_state.py  test_phase1.py  test_stt_filters.py
wake_word/: detect.py  requirements.txt  setup_models.py
wake_word/models/: hey_jarvis.tflite
