[project]
name = "kancha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    # RAG/vector memory disabled for now.
    # "chromadb>=0.5.5",
    "edge-tts>=7.2.8",
    "elevenlabs>=2.52.0",
    "google-genai>=2.6.0",
    "groq>=0.4.0",
    "httpx>=0.27.0",
    "numpy>=2.4.6",
    # RAG/vector memory disabled for now.
    # "ollama>=0.4.0",
    "openwakeword>=0.4.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
]
